# lol-meta-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-refresh.yml  weekly-refresh.yml
data/output/: champions_by_role.json  meta_summary.json  top_champions.json
docs/: data-api.md
pipeline/: __main__.py  config.py  ingest.py  main.py  output.py  transform.py
pipeline-enterprise/: README.md  docker-compose.yml
pipeline-enterprise/airflow/dags/: meta_tracker_dag.py
pipeline-enterprise/dbt/: dbt_project.yml
pipeline-enterprise/dbt/models/marts/: fct_champion_stats.sql
pipeline-enterprise/dbt/models/staging/: stg_matches.sql
scripts/: test_api_key.py
tests/: conftest.py  test_api_connection.py  test_ingest.py  test_output.py  test_transform.py
tests/fixtures/: sample_match.json
