[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-meta-tracker"
version = "0.1.0"
requires-python = "==3.11.*"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
